--- a/package.json
+++ b/package.json
@@ -1,25 +1,30 @@
 {
-  "name": "manczakapi",
-  "version": "0.0.0",
-  "description": "",
-  "main": "index.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/jakubmanczak/manczakapi.git"
-  },
-  "author": "jakubmanczak",
-  "license": "UNLICENSED",
-  "bugs": {
-    "url": "https://github.com/jakubmanczak/manczakapi/issues"
-  },
-  "homepage": "https://github.com/jakubmanczak/manczakapi#readme",
-  "dependencies": {
-    "body-parser": "^1.20.0",
-    "cors": "^2.8.5",
-    "dotenv": "^16.0.1",
-    "express": "^4.18.1"
-  }
+	"name": "manczakapi",
+	"version": "0xDEADBEEF",
+	"description": "",
+	"main": "dist/index.js",
+	"scripts": {
+		"start": "tsc && node .",
+		"build": "tsc",
+		"serve": "node .",
+		"test": "echo \"Error: no test specified\" && exit 1"
+	},
+	"repository": {
+		"type": "git",
+		"url": "git+https://github.com/jakubmanczak/api.git"
+	},
+	"author": "jakubmanczak",
+	"license": "UNLICENSED",
+	"bugs": {
+		"url": "https://github.com/jakubmanczak/api/issues"
+	},
+	"homepage": "https://github.com/jakubmanczak/api#readme",
+	"dependencies": {
+		"@types/cors": "^2.8.13",
+		"@types/express": "^4.17.15",
+		"cors": "^2.8.5",
+		"dotenv": "^16.0.1",
+		"express": "^4.18.1",
+		"typescript": "^4.9.4"
+	}
 }
