--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,9 +8,7 @@ edition = "2021"
 [dependencies]
 axum = "0.7.5"
 tokio = { version = "1.38.0", features = ["full"] }
-sqlx = { version = "0.7.4", features = ["uuid", "chrono", "runtime-tokio", "sqlite", "tls-rustls"] }
-chrono = { version = "0.4.38", features = ["serde"] }
-uuid = { version = "1.9.0", features = ["v7", "serde"] }
 tracing = "0.1.40"
 tracing-subscriber = "0.3.18"
 dotenvy = "0.15.7"
+sqlite = "0.36.0"
