--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,3 +12,4 @@ tracing = "0.1.40"
 tracing-subscriber = "0.3.18"
 dotenvy = "0.15.7"
 sqlite = "0.36.0"
+tower-http = { version = "0.5.2", features = ["cors"] }
