--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,10 +6,12 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-axum = "0.7.5"
+axum = { version = "0.7.5", features = ["macros"] }
 tokio = { version = "1.38.0", features = ["full"] }
 tracing = "0.1.40"
 tracing-subscriber = "0.3.18"
 dotenvy = "0.15.7"
 sqlite = "0.36.0"
 tower-http = { version = "0.5.2", features = ["cors"] }
+serde = { version = "1.0.204", features = ["derive"] }
+serde_json = "1.0.120"
