--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "api"
-version = "2.3.1"
+version = "2.4.0"
 edition = "2021"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
@@ -16,3 +16,5 @@ tower-http = { version = "0.5.2", features = ["cors"] }
 serde = { version = "1.0.204", features = ["derive"] }
 serde_json = "1.0.120"
 rust-argon2 = "2.1.0"
+base64 = "0.22.1"
+ulid = "1.1.3"
